min archive time started
<==== Mercurial data ====>
Branch: max_archive

--- a/client/src/ui/widgets/properties/camera_schedule_widget.ui
+++ b/client/src/ui/widgets/properties/camera_schedule_widget.ui
@@ -63,7 +63,7 @@
    </item>
    <item>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="3">
+     <item row="0" column="5">
       <widget class="QSpinBox" name="spinBoxMaxDays">
        <property name="minimum">
         <number>1</number>
@@ -73,7 +73,7 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="5">
+     <item row="0" column="7">
       <spacer name="horizontalSpacer_5">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -89,7 +89,7 @@
      <item row="0" column="1">
       <widget class="QCheckBox" name="checkBoxMaxArchive">
        <property name="text">
-        <string>Strict maximum archive duration to</string>
+        <string>Strict archive range. Min:</string>
        </property>
       </widget>
      </item>
@@ -109,12 +109,38 @@
        </property>
       </spacer>
      </item>
-     <item row="0" column="4">
+     <item row="0" column="6">
       <widget class="QLabel" name="maxArchiveLabel">
        <property name="text">
         <string>days</string>
        </property>
       </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="QSpinBox" name="spinBoxMinDays"/>
+     </item>
+     <item row="0" column="4">
+      <widget class="QLabel" name="minArchiveLabel">
+       <property name="text">
+        <string>Max: </string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="3">
+      <spacer name="horizontalSpacer_8">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Fixed</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>8</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </item>
