--- a/client/src/ui/dialogs/attach_to_videowall_dialog.ui
+++ b/client/src/ui/dialogs/attach_to_videowall_dialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Attach to videowall...</string>
+   <string>Attach to Video Wall...</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
