--- a/client/src/ui/widgets/routing_management_widget.ui
+++ b/client/src/ui/widgets/routing_management_widget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>580</width>
-    <height>395</height>
+    <width>572</width>
+    <height>387</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,29 +17,19 @@
    <item>
     <widget class="QGroupBox" name="addressesGroupBox">
      <property name="title">
-      <string>Server Addresses</string>
+      <string>Available Server Addresses</string>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="1,2">
       <item>
        <widget class="QListView" name="serversView"/>
       </item>
       <item>
-       <layout class="QVBoxLayout" name="verticalLayout" stretch="0,2">
+       <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="0,0">
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_2">
-          <item>
-           <spacer name="horizontalSpacer">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
+         <widget class="QTableView" name="addressesView"/>
+        </item>
+        <item>
+         <layout class="QVBoxLayout" name="verticalLayout">
           <item>
            <widget class="QPushButton" name="addButton">
             <property name="toolTip">
@@ -68,10 +58,20 @@
             </property>
            </widget>
           </item>
+          <item>
+           <spacer name="verticalSpacer">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
          </layout>
-        </item>
-        <item>
-         <widget class="QTableView" name="addressesView"/>
         </item>
        </layout>
       </item>
