--- a/client/src/ui/dialogs/attach_to_videowall_dialog.ui
+++ b/client/src/ui/dialogs/attach_to_videowall_dialog.ui
@@ -6,43 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>457</width>
-    <height>302</height>
+    <width>659</width>
+    <height>450</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Attach to Video Wall...</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
+  <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1,0,0,0,0">
    <item>
-    <widget class="QGroupBox" name="attachModeGroupBox">
+    <widget class="QGroupBox" name="previewGroupBox">
      <property name="title">
-      <string>Attach Mode</string>
+      <string>Preview</string>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout">
+     <layout class="QVBoxLayout" name="verticalLayout_4">
       <item>
-       <widget class="QRadioButton" name="amWindowRadioButton">
-        <property name="text">
-         <string>Current window</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QRadioButton" name="amScreenRadioButton">
-        <property name="text">
-         <string>Current screen</string>
-        </property>
-        <property name="checked">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QRadioButton" name="amAllRadioButton">
-        <property name="text">
-         <string>All screens</string>
-        </property>
-       </widget>
+       <widget class="QnVideowallPreviewWidget" name="previewWidget" native="true"/>
       </item>
      </layout>
     </widget>
@@ -95,25 +74,9 @@
     </widget>
    </item>
    <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item>
     <widget class="QCheckBox" name="autoFillCheckBox">
      <property name="text">
       <string>Fill the free space the same way</string>
-     </property>
-     <property name="checked">
-      <bool>true</bool>
      </property>
     </widget>
    </item>
@@ -139,6 +102,14 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QnVideowallPreviewWidget</class>
+   <extends>QWidget</extends>
+   <header location="global">ui/widgets/videowall_preview_widget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
