show infinite progress indicator when installing updates
<==== Mercurial data ====>
Branch: network_issues

--- a/client/src/ui/widgets/server_updates_widget.ui
+++ b/client/src/ui/widgets/server_updates_widget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>479</width>
-    <height>429</height>
+    <width>471</width>
+    <height>421</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -49,7 +49,6 @@
        </widget>
       </item>
      </layout>
-     <zorder></zorder>
      <zorder>updateFromLocalSourceButton</zorder>
      <zorder>installSpecificBuildButton</zorder>
      <zorder>horizontalSpacer</zorder>
@@ -64,12 +63,44 @@
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QLabel" name="updateStateLabel">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
         </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QWidget" name="progressIndicator" native="true">
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <spacer name="horizontalSpacer_3">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QnProgressWidget" name="indicator" native="true"/>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
        </widget>
       </item>
       <item>
@@ -99,6 +130,12 @@
    <class>QnDialogButtonBox</class>
    <extends>QDialogButtonBox</extends>
    <header location="global">ui/widgets/dialog_button_box.h</header>
+  </customwidget>
+  <customwidget>
+   <class>QnProgressWidget</class>
+   <extends>QWidget</extends>
+   <header>ui/widgets/dialog_button_box.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
