use rtspPort instead of appserverPort
<==== Mercurial data ====>
Branch: master

--- a/wixsetup/maven/filter-resources/Product-full.wxs
+++ b/wixsetup/maven/filter-resources/Product-full.wxs
@@ -86,7 +86,7 @@
             <RegistrySearch Id="ServerEcsPortReg"
                             Root="HKLM"
                             Key="Software\${company.name}\${mediaserver.name}"
-                            Name="appserverPort"
+                            Name="rtspPort"
                             Type="raw"
                             Win64="yes"/>
         </Property>
