--- a/wixsetup/maven/filter-resources/Client.wxs
+++ b/wixsetup/maven/filter-resources/Client.wxs
@@ -177,12 +177,14 @@
             <Component>
                 <File Id="ClientQt5PrintSupport$(var.suffix).dll" Name="Qt5PrintSupport$(var.suffix).dll" Source="$(var.SourceDir)\Qt5PrintSupport$(var.suffix).dll"  />                
             </Component>             
-            <Component>
+            <?if ${webkit} = true ?>
+			<Component>
                 <File Id="ClientQt5WebKit$(var.suffix).dll" Name="Qt5WebKit$(var.suffix).dll" Source="$(var.SourceDir)\Qt5WebKit$(var.suffix).dll"  />                
             </Component>             
             <Component>
                 <File Id="ClientQt5WebKitWidgets$(var.suffix).dll" Name="Qt5WebKitWidgets$(var.suffix).dll" Source="$(var.SourceDir)\Qt5WebKitWidgets$(var.suffix).dll"  />                
-            </Component>             
+            </Component>
+			<?endif?>			
             <Component>
                 <File Id="ClientQt5MultimediaWidgets$(var.suffix).dll" Name="Qt5MultimediaWidgets$(var.suffix).dll" Source="$(var.SourceDir)\Qt5MultimediaWidgets$(var.suffix).dll"  />                
             </Component>             
@@ -198,7 +200,8 @@
             <Component>
                 <File Id="ClientQt5Sensors$(var.suffix).dll" Name="Qt5Sensors$(var.suffix).dll" Source="$(var.SourceDir)\Qt5Sensors$(var.suffix).dll"  />                
             </Component>             
-            <Component>
+            <?if ${webkit} = true ?>
+			<Component>
                 <File Id="Clienticudt53.dll" Name="icudt53.dll" Source="$(var.SourceDir)\icudt53.dll"  />                
             </Component>                 
             <Component>
@@ -212,7 +215,8 @@
             </Component>                         
             <Component>
                 <File Id="ClientlibEGL$(var.suffix).dll" Name="libEGL$(var.suffix).dll" Source="$(var.SourceDir)\libEGL$(var.suffix).dll"  />                
-            </Component>            
+            </Component>
+			<?endif?>            
             <Component>
                 <File Id="Clientquazip.dll" Name="quazip.dll" Source="$(var.SourceDir)\quazip.dll"  />                
             </Component>
