--- a/client/src/ui/dialogs/join_other_system_dialog.ui
+++ b/client/src/ui/dialogs/join_other_system_dialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>312</width>
-    <height>91</height>
+    <width>310</width>
+    <height>89</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -27,9 +27,6 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="1">
-    <widget class="QLineEdit" name="urlEdit"/>
-   </item>
    <item row="1" column="1">
     <widget class="QLineEdit" name="passwordEdit">
      <property name="echoMode">
@@ -48,6 +45,19 @@
     <widget class="QLabel" name="passwordLabel">
      <property name="text">
       <string>Password:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QComboBox" name="urlComboBox">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="editable">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
